--- a/package.json
+++ b/package.json
@@ -4,28 +4,39 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "export": "next export",
+    "dev": "next dev --turbo",
     "start": "next start",
-    "postinstall": "fumadocs-mdx"
+    "postinstall": "fumadocs-mdx",
+    "deploy": "pnpm run build && pnpm run export && gh-pages -d out"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "fumadocs-core": "15.2.1",
+    "fumadocs-mdx": "11.5.7",
+    "fumadocs-twoslash": "^3.1.0",
+    "fumadocs-ui": "15.2.1",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "octokit": "^4.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.2.1",
-    "fumadocs-core": "15.2.1",
-    "fumadocs-mdx": "11.5.7"
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "typescript": "^5.8.2",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.0.17",
-    "tailwindcss": "^4.0.17",
-    "postcss": "^8.5.3",
     "eslint": "^8",
-    "eslint-config-next": "15.2.4"
+    "eslint-config-next": "15.2.4",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5.8.2",
+    "tsconfig": "workspace:*"
   }
 }
