--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next dev --turbo",
     "start": "next start",
     "postinstall": "fumadocs-mdx",
-    "deploy": "pnpm run build && pnpm run export && gh-pages -d out"
+    "deploy": "pnpm run build && gh-pages -d out --dotfiles --cname yoro.yono233.cn"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
@@ -21,6 +21,7 @@
     "octokit": "^4.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "shiki": "^3.2.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -36,7 +37,7 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.17",
-    "typescript": "^5.8.2",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "^5.8.2"
   }
 }
